removed repositories from non matching services